Création du dossier test6 - Quick filter

--- a/test6/webapp/index.html
+++ b/test6/webapp/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Tableau responsive</title>
+  <title>Quick Filter</title>
   <script id="sap-ui-bootstrap" type="text/javascript" src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
     data-sap-ui-theme="sap_fiori_3_dark" data-sap-ui-libs="sap.m,sap.ui.layout"
-    data-sap-ui-resourceroots='{"test5": "./"}' data-sap-ui-compatVersion="edge" data-sap-ui-async="true">
+    data-sap-ui-resourceroots='{"test6": "./"}' data-sap-ui-compatVersion="edge" data-sap-ui-async="true">
     </script>
 
   <script src="localService/mockserver.js"></script>
@@ -14,7 +14,7 @@
   <script>
     sap.ui.getCore().attachInit(function () {
       new sap.ui.core.ComponentContainer({
-        name: "test5"
+        name: "test6"
       }).placeAt("content");
     });
   </script>
